--- a/src/app/shop-service/shop-service.component.html
+++ b/src/app/shop-service/shop-service.component.html
@@ -5,7 +5,7 @@
   <button class="btn btn-success" (click)="DisplayForm()" >Add New Service</button>
 
 </div> -->
-<div style="overflow: hidden;height:370px;">
+<div style="overflow: hidden !important;">
 
 <div class="row">
 
@@ -21,7 +21,7 @@
                 </tr>
                 <tr style="color: black;">
                 <th style="width:40px;" class="fontwghtcls">Sl. No.</th>
-                <th style="width:200px;" class="fontwghtcls">Service Name</th>
+                <th style="width:150px;text-align: left;padding-left:25px !important;" class="fontwghtcls">Service Name</th>
                 <th style="width:70px;" class="fontwghtcls">Service Status	 </th>
                 <th style="width:150px;" class="fontwghtcls">Model </th>
                 <th style="width:90px;" class="fontwghtcls">Service Amount (<span><i class="fa fa-rupee"></i></span>)</th>
@@ -39,7 +39,7 @@
               <tr *ngFor="let service of  serviceData1 | paginate: config ;  let i=index;" >
 
                 <td>{{i+1}}</td>
-                <td ><input id="service_{{service.service_id}}__{{i}}" type="number" value="{{service.service_id}}"  style="width: 60px;" hidden><input id="servicename_{{service.service_id}}_{{i}}" type="text" value="{{service.service_name}}"  style="width: 250px;border:none;text-align: center;" readonly></td>
+                <td ><input id="service_{{service.service_id}}__{{i}}" type="number" value="{{service.service_id}}"  style="width: 60px;" hidden><input id="servicename_{{service.service_id}}_{{i}}" type="text" value="{{service.service_name}}"  style="width: 250px;border:none;text-align: left;padding-left:21px;" readonly></td>
                 <td >
 
                   <span *ngIf="service.status == '1'">&nbsp;</span>
@@ -67,7 +67,7 @@
                       <a  *ngIf="service.status == '1';else butdisable" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" ><i style="color: #01992d;font-size: 20px;cursor: pointer;" class="fa fa-check-circle"></i></a>
                       <!-- <button  class="allSubmitbtn" *ngIf="service.status == '1';else butdisable" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)">Update</button> -->
                       <ng-template #butdisable>
-                        <a  id="updatebtn_{{service.service_id}}_{{i}}"><i style="color: rebeccapurple;font-size: 20px;opacity:.65;" class="fa fa-check-circle"></i></a>
+                        <a  id="updatebtn_{{service.service_id}}_{{i}}"><i style="color: gray;font-size: 20px;opacity:.65;" class="fa fa-check-circle"></i></a>
                       <!-- <button   class="allSubmitbtn" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;opacity:.65" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" disabled>Update</button> -->
                     </ng-template>
                     </td>
@@ -94,7 +94,7 @@
 
                      <!-- <button class="allSubmitbtn"  *ngIf="service.status == '1';else butdisable1" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;" id="updatebtn_{{service.service_id}}" (click)="UpdateOfferAmount(service.service_id,i)">Update</button> -->
                      <ng-template #butdisable1>
-                      <a  id="updatebtn_{{service.service_id}}" ><i style="color:rebeccapurple;font-size: 20px;opacity: 0.65;visibility: unset;" class="fa fa-check-circle"></i></a>
+                      <a  id="updatebtn_{{service.service_id}}" ><i style="color:grey;font-size: 20px;opacity: 0.65;visibility: unset;" class="fa fa-check-circle"></i></a>
                       <!-- <button   class="allSubmitbtn" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;opacity:.65" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" disabled>Update</button> -->
                     </ng-template>
 
@@ -205,7 +205,7 @@
               </div>
           </td>
           <td  >
-            <button class="allSubmitbtn btn-success btn" id="addserviceshopbtn" style="border-radius: 21px; width:68px; border:none; height:28px;font-weight: bold;" (click)="AddShopserviceDetails(shopserviceForm.value)" [disabled]='!shopserviceForm.valid'>Add</button>
+            <button class="allSubmitbtn  btn" id="addserviceshopbtn" style="width:68px; border:none; height:28px;font-weight: bold;" (click)="AddShopserviceDetails(shopserviceForm.value)" [disabled]='!shopserviceForm.valid'>Add</button>
 
           </td>
 
@@ -270,7 +270,7 @@
             </td>
 
         <td style="text-align: left;">
-              <button class="allSubmitbtn" style="margin-top: -9px;margin-left: 12px;border-radius: 21px; width:68px; border:none; height:28px;font-weight: bold;"  (click)="AddMasterserviceDetails(MasterserviceForm.value)" [disabled]='!MasterserviceForm.valid'  >Add</button>
+              <button class="allSubmitbtn btn" style="margin-top: -9px;margin-left: 12px; width:68px; border:none; height:28px;font-weight: bold;"  (click)="AddMasterserviceDetails(MasterserviceForm.value)" [disabled]='!MasterserviceForm.valid'  >Add</button>
 
             </td>
 
@@ -322,3 +322,4 @@
     </div>
 
 
+<br>
